--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -5,6 +5,11 @@
     <%= f.hidden_field :content %>
     <br>
     <p><%= @blog.content %></p>
-    <%= f.submit, 'Tweet!' %>
+    <%= f.submit "Tweet!"%>
     
+<% end %>
+
+<%= form_for(@blog, url:new_blog_path, method:'get') do |f| %>
+    <%= f.hidden_field :content %>
+    <%= f.submit "戻る", name: 'back' %>
 <% end %>
