--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,7 +11,7 @@
         <% end %>
                
         <%= f.label :content %>
-        <%= f.text_field :content, class: 'form-control form-control-lg' %>
+        <%= f.text_field :content, class: 'form-control form-control-lg', placeholder: "What do you now?" %>
         
         <br>
         <%= f.submit "投稿", class: 'btn btn-outline-primary' %>
