--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,15 +1,20 @@
-<h3>以下の内容で投稿する</h3>
-
-<%= form_for(@blog) do |f| %>
-    <%= f.label :content %>
-    <%= f.hidden_field :content %>
-    <br>
-    <p><%= @blog.content %></p>
-    <%= f.submit "Tweet!"%>
-    
-<% end %>
-
-<%= form_for(@blog, url:new_blog_path, method:'get') do |f| %>
-    <%= f.hidden_field :content %>
-    <%= f.submit "戻る", name: 'back' %>
-<% end %>
+<div class="container">
+    <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+        <h3>以下の内容で投稿する</h3>
+        
+        <%= form_for(@blog) do |f| %>
+            <%= f.label :content %>
+            <%= f.hidden_field :content %>
+            <br>
+            <p><%= @blog.content %></p>
+            <%= f.submit "Tweet!", class: 'btn btn-outline-primary btn-block'%>
+            
+        <% end %>
+        
+        <%= form_for(@blog, url:new_blog_path, method:'get') do |f| %>
+            <%= f.hidden_field :content %>
+            <%= f.submit "戻る", name: 'back', class: 'btn btn-outline-dark' %>
+        <% end %>
+        
+    </div>
+</div>
