--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,7 @@
+<div id="page-top-btn2" class="page-top-btn">
+    <p><a class="move-page-top" id="move-page-top2">▲</a></p>
+</div>
+
 <div class="container">
     <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
         <h3>Tweet一覧</h3>
