--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -11,7 +11,7 @@
 }
 .navbar-default {
   .navbar-brand {
-    color: #ccc;
+    color: #330000;
     &:hover {
       color: white;
     }
@@ -47,14 +47,35 @@
   }
 }
 
+.navbar-right{
+    position: fixed;
+    right: 0;
+}
 
-
+html{
+    position: relative;
+    min-height: 100%;
+    min-width: 100%;
+}
 
 
 header {
-    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #00AFFF;
     height: 20px;
+}
+
+#clock_date{
+    font-size: 2rem;
+    position: relative;
+    left: 50%;
+}
+#clock_time{
+    font-size: 2rem;
+    position: relative;
+    left: 50%;
 }
 
 body{
@@ -63,22 +84,49 @@ body{
 .container{
     width: 100%;
     margin: 100 auto;
+    font-size: 15px;
 }
 
 footer{
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
-    background-color: #00AFFF;
+    margin: auto;
+    background-color: #000000;
     height: 20px;
 }
 
-h3{
+#sub_title{
+    float: left;
+    position: absolute;
+    left: 10;
+}
+
+#new_tweet{
+    float: left;
+    position: relative;
+    left: 10;
+}
+
+#tweet{
+    font-size: 5rem;
+    font-weight: 800;
+}
+
+h2{
     text-align: left;
 }
 
-#kk{
-    float: left;
+#confirm_tweet{
+    font-size: 3.5rem;
+    font-weight: 500;
+}
+
+.form_button{
+    float: right;
+    position: relative;
+    top: 45px;
 }
 
 .btn-outline {
@@ -138,15 +186,37 @@ h3{
   }
 }
 
+.edit{
+    position: relative;
+    bottom: 90px;
+    left: 135px;
+}
+.delete{
+    position: relative;
+    bottom: 90px;
+    left: 135px;
+}
 img.edit:hover{
- opacity: 0.5;
- cursor: pointer;
+    opacity: 0.5;
+    cursor: pointer;
+    position: relative;
+    bottom: 90px;
+    left: 135px;
 }
 img.edit:active{
     position: relative;
-    top: 3px;
+    bottom: 87px;
+    left: 135px;
 }
-.delete{
-    width: 60px;
-    height: 60px;
+.delete:hover{
+    opacity: 0.5;
+    cursor: pointer;
+    position: relative;
+    bottom: 90px;
+    left: 135px;
+}
+.delete:active{
+    position: relative;
+    bottom: 87px;
+    left: 135px;
 }
