--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -14,8 +14,10 @@
         <%= f.text_field :content, class: 'form-control form-control-lg', placeholder: "What do you now?" %>
         
         <br>
-        <%= f.submit "投稿", class: 'btn btn-outline-primary' %>
-        
-        <%= link_to "一覧に戻る", blogs_path %>
+        <%= f.submit "投稿", class: 'btn btn-primary form_button'%>
+        <br>
+        <br>
+        <br>
+        <%= link_to "一覧に戻る", blogs_path, class: 'form_button' %>
   
 <% end %>
