--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,23 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-inverse  navbar-default navbar-static-top">
       <div class="container">
         <a class="navbar-brand" href="#">Dive07</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav　nav-bar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Top Page", blogs_path %></li>
-                <li><%= link_to "New Tweet", new_blog_path %></li>
-                <li><%= link_to "All Delete", delete_blogs_path, data:{confirm: '本当に削除していいですか？'}  %></li>
-              </ul>
-            </li>
-          </ul>
+          <div class="col-md-8 col-sm-8"></div>
+          <div class="col-md-2 col-sm-4 pull-right">
+            <ul class="nav navbar-nav　nav-bar-right">
+              <li class="dropdown">
+                <a href="#" class="btn btn-sm btn-success dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Top Page", blogs_path %></li>
+                  <li><%= link_to "New Tweet", new_blog_path %></li>
+                  <li><%= link_to "All Delete", delete_blogs_path, data:{confirm: '本当に削除していいですか？'}  %></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -47,7 +50,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2018</p>
+        <p>Created by Daiki Nagai</p>
       </footer>
 
     </div> <!-- /container -->
