--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
     <div class="navbar navbar-inverse  navbar-default navbar-static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Dive07</a>
+        <a class="navbar-brand" href="<%=root_path%>">Dive07</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <div class="col-md-8 col-sm-8"></div>
           <div class="col-md-2 col-sm-4 pull-right">
@@ -31,7 +31,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Top Page", blogs_path %></li>
                   <li><%= link_to "New Tweet", new_blog_path %></li>
-                  <li><%= link_to "All Delete", delete_blogs_path, data:{confirm: '本当に削除していいですか？'}  %></li>
+                  <li><%= link_to "All Delete", delete_blogs_path, method: :delete,data:{confirm: '本当に削除していいですか？'}  %></li>
                 </ul>
               </li>
             </ul>
